--- a/style.css
+++ b/style.css
@@ -103,13 +103,8 @@ nav a {
 	background-size:cover;
 	width:100vw;
  height:100vh;
- overflow:scroll;
 }
 
-#test{
-    overflow:scroll;
-
-}
 #firstword {
 margin-top: -50px;
 }
@@ -128,7 +123,6 @@ font-size: 5vw;
 	  //padding-left:30px;
      padding-left:50px;
 	    }
-
 
 
 #third{
@@ -249,7 +243,7 @@ background-color: rgba(4, 5, 4,0.4);
   #box{
 	background-color:rgba(4, 5, 4,0.25);
 	width:50vw;
-	  height:100vh;
+	height:100vh;
 	float:right;
   }
 
@@ -296,6 +290,7 @@ background-color: rgba(4, 5, 4,0.4);
 
 .jobTitle {
   text-shadow: .8px .8px 1px #000;
+  color: rgba(193, 129, 23,1);
 }
 
 
