--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 
 h1{
-//font-family: 'Cookie', cursive;
   font-size: 5vh;
   letter-spacing: -1px;
   color: rgb(61,64,66);
@@ -14,51 +13,51 @@ h1{
   //border-color: black;
   border-bottom: solid 5px  rgba(61,64,66,0.8);
   border-bottom-width: thin;
-  }
+}
 
-    .name{
-     font-family: 'Playfair Display', serif;
-      font-weight:light;
-      margin-top: 35vh;
-      font-size: 6.5vw;
-        color: rgb(95, 99, 102);
-      //color: rgb(118,123,127);
-      line-height: 0.8em;
-      letter-spacing: -2px;
-      text-align: center;
+.name{
+  font-family: 'Playfair Display', serif;
+  font-weight:light;
+  margin-top: 35vh;
+  font-size: 6.5vw;
+  color: rgb(95, 99, 102);
+  //color: rgb(118,123,127);
+  line-height: 0.8em;
+  letter-spacing: -2px;
+  text-align: center;
 
-	  }
+}
 
-  .pd{
-    margin-top: 0vh;
-    font-size: 2.5vw;
-    color: white;
-    text-align: center;
-  }
+.pd{
+  margin-top: 0vh;
+  font-size: 2.5vw;
+  color: white;
+  text-align: center;
+}
 
-  #quote{
-    margin-top: -10px;
-	font-size: 2vw;
+#quote{
+  margin-top: -10px;
+  font-size: 2vw;
   font-family: 'Playball', cursive;
   text-align: center;
   color: gray;
-    text-shadow: .1px .3px 10px #000;
-  }
+  text-shadow: .1px .3px 10px #000;
+}
 
-  html,body{
-    padding: 0;
-    margin:0;
-	height 100vh;
-	width 100vw;
-  }
+html,body{
+  padding: 0;
+  margin:0;
+  height 100vh;
+  width 100vw;
+}
 
 body {
   padding: none;
- font-family: 'Playfair Display', serif;
- font-weight: bold;
- color:white;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+  color:white; 
   font-size: 18px;
- line-height: 1.5;
+  line-height: 1.5;
   max-height: 100%
   text-align: center;
   width:100vw;
@@ -70,7 +69,7 @@ nav{
   //font-family: 'Pavanam', sans-serif;
   text-align: right;
   padding-top: 4.7vh;
-   margin-left:-1.2vw;
+  margin-left:-1.2vw;
   position:fixed;
   width: 100%;
   padding-bottom: 5vh;
@@ -78,7 +77,7 @@ nav{
   text-shadow: .8px -.8px .8px #FFF;
 }
 
-nav a {
+nav a{
   text-decoration: white;
 	color:#444;
   //display: inline;
@@ -87,11 +86,11 @@ nav a {
 }
 
 #top{
-	  background-image: url("mountain.jpg");
-	  width:100vw;
-	  height:100vh;
-	 background-size: cover;
-	 background-position:bottom;
+  background-image: url("mountain.jpg");
+  width:100vw;
+  height:100vh;
+  background-size: cover;
+  background-position:bottom;
   background-attachment: fixed;
   padding-bottom: 10vh;
 }
@@ -102,52 +101,50 @@ nav a {
   background-attachment: fixed;
 	background-size:cover;
 	width:100vw;
- height:100vh;
+  height:100vh;
 }
 
-#firstword {
-margin-top: -50px;
+#firstword{
+  margin-top: -50px;
 }
 
 h2{
-align-content:center;
-padding-left: 18vw;
-padding-top:35vh;
-font-size: 5vw;
+  align-content:center;
+  padding-left: 18vw;
+  padding-top:35vh;
+  font-size: 4vw;
 }
 
-
- #second p{
-	  text-align:left;
-	  font-size:4.5vh;
-	  //padding-left:30px;
-     padding-left:50px;
-	    }
-
+#second p{
+  text-align:left;
+  font-size:4.5vh;
+  //padding-left:50px;
+  padding-left:50px;  
+}
 
 #third{
-
 	background-position:bottom;
 	background-image: url("pic5.jpg");
   //-webkit-filter: grayscale(100%);
-
 	background-attachment: scroll;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 	width:100vw;
-	  height:120vh;
+	height:120vh;
 }
 
 .fill{
 	width:100vw;
-	  height:22vh;
-		background-color:rgba(6, 17, 14,.9);
+  //height:22vh;
+	height: 20vh;
+  background-color:rgba(6, 17, 14,.96);
 }
 
 .clear{
-width:100vw;
-	  height:27vh;
+  width:100vw;
+	//height:27vh;
+  height: 30vh;
 }
 
 #space{
@@ -158,7 +155,7 @@ width:100vw;
 
 #work{
 	height:800vh;
-    width: 30vw;
+  width: 30vw;
 	padding-left:10vw;
 	padding-right:5vw;
   font-size: 1.5vw;
@@ -166,14 +163,15 @@ width:100vw;
 }
 
 ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
 }
+
 #experience{
 	width:100vw;
   text-shadow: .8px .8px 1px #000;
-	 height:100vh;
-    //background-image: url("b4.jpg");
+	height:100vh;
+  //background-image: url("b4.jpg");
 	background:url("b4.jpg");
 	background-size:cover;
 	background-position:right;
@@ -183,18 +181,20 @@ width:100vw;
 }
 
 #designWords{
-text-align:center;
-font-size: 5vw;
-padding-top:35vh;
+  text-align:center;
+  font-size: 3vw;
+  //padding-top:35vh;
+  padding-right: 3vw;
+  padding-top: 80vh;
 }
 
-    #vox{
+#vox{
 	background-color:rgba(4, 5, 4,0.4);
 	width:50vw;
 	height:100vh;
 	float:left;
 	font-size:2vh;
-  }
+}
 
 
 #me{
@@ -207,48 +207,49 @@ padding-top:35vh;
   //padding-bottom: 5vh;
   background-position: center;
   //-webkit-filter: grayscale(50%);
-   background-image: url("5.jpg");
+  background-image: url("5.jpg");
 }
 
 
-	#contact{
+#contact{
 	color:white;
   padding-right: 3vw;
   float:right;
-  	list-style:none;
+ 	list-style:none;
 	padding-top:3vh;
-	}
-  #contact li{
-    text-align: right;
-  }
+}
+
+#contact li{
+  text-align: right;
+}
 
 #bio{
-margin-left: 20vw;
-margin-right: 20vw;
-padding-left: 3vw;
-padding-right: 3vw;
-padding-top:1vw;
-padding-bottom:1vw;
-background-color: rgba(4, 5, 4,0.4);
+  margin-left: 20vw;
+  margin-right: 20vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  padding-top:1vw;
+  padding-bottom:1vw;
+  background-color: rgba(4, 5, 4,0.4);
 }
 
-  #bio p{
+#bio p{
 	font-size:2.3vh;
-  }
+}
 
 #space{
- // margin-top: 20%;
+  //margin-top: 20%;
 }
 
-  #box{
+#box{ //skills box
 	background-color:rgba(4, 5, 4,0.25);
 	width:50vw;
 	height:100vh;
-	float:right;
-  }
+}
 
-  .tab { text-indent:60px;
-  }
+.tab { 
+  text-indent:60px;
+}
 
 #speak{
   font-size: 9vh;
@@ -262,15 +263,14 @@ background-color: rgba(4, 5, 4,0.4);
   margin-top: -14vh;
   text-align: left;
   margin-left:7vw;
-
 }
 
 .trans{
   margin-top: 100px;
- padding-bottom: 100px;
+  padding-bottom: 100px;
   margin-left: 100px;
   margin-right: 100px;
-    background:rgba(41, 41, 41, 0.3);
+  background:rgba(41, 41, 41, 0.3);
 }
 
 .picture{
@@ -301,13 +301,14 @@ background-color: rgba(4, 5, 4,0.4);
 
 a:link#cv,
 a:visited#cv{
-    //color: #A9F5E1;
-    color: #83c1b1;
-    background-color: transparent;
-    text-decoration: none;
+  //color: #A9F5E1;
+  color: #83c1b1;
+  background-color: transparent;
+  text-decoration: none;
 }
+
 a:hover#cv{
-    color: #BCA9F5;
-    background-color: transparent;
-    text-decoration: underline;
+  color: #BCA9F5;
+  background-color: transparent;
+  text-decoration: underline;
 }
