change to last page image

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@
 
 
    #me{
-      background-image: url("images/oceana.jpg");
+      background-image: url("images/sidewalk.jpg");
       margin-top:-9vh;
       background-repeat: repeat;
       min-height: 100vh;
